Thu Feb 14 11:13:22 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimmulticontext.c (gtk_im_multicontext_get_surrounding): 
	Fix bug where we called get_surrounding on the context,.
	not the slave.

Thu Feb 14 00:10:09 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktooltips.c (gtk_tooltips_event_handler): Only
	pop the tooltip down on a select set of events, not
	on any unknown event. (#71157, Jody Goldberg)

	* gtk/gtktooltips.c (gtk_tooltips_event_handler):
	Fix some warnings.

Thu Feb 14 00:02:21 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcalendar.c (gtk_calendar_size_request): A bunch of
	small allocation/drawing fixes.

	* gtk/gtkcalendar.c: Replace DAY_XPAD, DAY_YPAD with
	GtkWidget::focus-padding

Wed Feb 13 23:01:20 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcalendar.c: Patch from Bill Haneman to draw
	to focus using gtk_paint_focus() with the focus width
	GtkWidget::focus-width. (#63075)

	* gtk/gtkcalendar.c (gtk_calendar_size_request): Initialize
	label_char_ascent/descent to 0. (#56925, reported by
	(Jean-Noel Guiheneuf)

2002-02-13  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_flush_scroll): validate a
	larger area, proportional to widget size, to fix
	#71427 reported by Dennis Bjorklund

2002-02-13  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_paint): just go ahead and flush 
	all the first validate stuff if it hasn't been done, presumably
	someone called process_updates at a weird time.

	* tests/testtext.c (do_apply_colors): terminate on >= end, not >
	end, avoids infinite loop when end is at the end of the buffer.

	* gtk/gtktextbtree.c (_gtk_text_btree_delete): when creating a
	line data, we were adding it to the wrong line ("line" instead of
	"start_line")

2002-02-13  Joe Shaw  <joe@ximian.com>

	* gtk/gtktreeitem.c (gtk_tree_item_expose): Don't chain up to the
	container's expose event.  Instead call
	gtk_tree_item_expose_child() on each child.  Avoids a failed